added lab01 notebook, fixed expressions for trap. int. in 01 notebook

--- a/01_integration.ipynb
+++ b/01_integration.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -27,8 +25,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -42,8 +38,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -61,8 +55,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -80,8 +72,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -95,8 +85,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -110,8 +98,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -123,8 +109,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -136,8 +120,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -152,8 +134,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -175,8 +155,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -192,8 +170,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -211,8 +187,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -229,8 +203,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -242,8 +214,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -258,8 +228,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -271,8 +239,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -296,8 +262,6 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -322,8 +286,6 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -338,8 +300,6 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -367,8 +327,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -384,8 +342,6 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -400,8 +356,6 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -416,8 +370,6 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -451,8 +403,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -465,9 +415,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -493,8 +440,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -508,8 +453,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -524,8 +467,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -543,8 +484,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -556,8 +495,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -571,8 +508,6 @@
    "execution_count": 55,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -593,9 +528,6 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -619,8 +551,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -633,9 +563,7 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -649,11 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -670,8 +594,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -687,8 +609,6 @@
    "execution_count": 33,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -721,9 +641,6 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
@@ -750,8 +667,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -777,8 +692,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -792,8 +705,6 @@
    "execution_count": 42,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -812,9 +723,6 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -839,9 +747,6 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -867,8 +772,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -882,8 +785,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -901,8 +802,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -917,10 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "We can explore integration routines in the <a href=\"https://docs.scipy.org/doc/scipy/reference/integrate.html\">scipy.integrate</a> library."
    ]
@@ -929,9 +825,6 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -955,8 +848,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -970,8 +861,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -985,8 +874,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1000,8 +887,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1009,18 +894,16 @@
    "source": [
     "The total area under $f(x)$ in the interval $[a,b]$ is then:\n",
     "\n",
-    "$$A = \\int\\limits_a^b f(x)\\, dx  \\sum\\limits_0^{N-1} A_i \\approx \\sum\\limits_0^{N-1} T_i \\frac{h}{2}\\sum\\limits_0^{N-1}(f_i + f_{i+1}),$$\n",
+    "$$A = \\int\\limits_a^b f(x)\\, dx = \\sum\\limits_{i=0}^{N-1} A_i \\approx \\sum\\limits_{i=0}^{N-1} T_i= \\frac{h}{2}\\sum\\limits_{i=0}^{N-1}(f_i + f_{i+1}),$$\n",
     "\n",
     "which can be recast as\n",
     "\n",
-    "$$A \\approx \\frac{h}{2}(f_0 + f_{N-1}) + h\\sum\\limits_1^{N-2}(f_i),$$"
+    "$$A \\approx h\\left[\\frac{1}{2}(f_0 + f_{N-1}) + \\sum\\limits_{i=1}^{N-2}f_i,\\right].$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1034,8 +917,6 @@
    "execution_count": 26,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1069,8 +950,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1088,8 +967,6 @@
    "execution_count": 26,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1117,8 +994,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1134,8 +1009,6 @@
    "execution_count": 22,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1150,9 +1023,6 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1199,8 +1069,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1210,7 +1078,7 @@
     "\n",
     "* Install full Anaconda Python 3.7 distribution following <a href=\"http://docs.anaconda.com/anaconda/install/\">installation instructions</a> for your OS on your laptop. \n",
     "\n",
-    "* download the Jupyter notebook with these notes from the <a href=\"\">course GitHub repository</a> (notebook 01_*.ipynb)\n",
+    "* download the Jupyter notebook with these notes from the <a href=\"https://github.com/a-kravtsov/a211w20\">course GitHub repository</a> (notebook 01_*.ipynb)\n",
     "\n",
     "* Run Jupyter notebook server <tt>jupyter notebook</tt> and access the l01_approximation.ipynb notebook. Make sure you can run it.  \n",
     "\n",
@@ -1235,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
