--- a/01_integration.ipynb
+++ b/01_integration.ipynb
@@ -816,7 +816,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### Numerical integration is often called numerical *quadrature*\n",
+    "\n",
+    "The origin of this term goes back to the Greek philosopher/mathematician <a href=\"https://plato.stanford.edu/entries/anaxagoras/\">Anaxagoras</a>, who lived in the 5th century BC and was inprisoned for claiming that the Sun is not a god, but a hot, flowing stone in space and occupied his time in prison trying to solve the problem of finding a side length of a square that had the same area as a circle (i.e. he was trying <a href=\"https://en.wikipedia.org/wiki/Squaring_the_circle\">\"to square a circle\"</a> - the problem that occupied many mathematicians after Anaxagoras). \n",
+    "\n",
+    "More generally, one can think of computing $\\int_a^b f(x)dx$ as finding side lengths of quadrangle that has the same area as the area under the curve $f(x)$ for $x\\in [a,b]$. Hence, the term *quadrature* and <tt>QUAD</tt> in the name of <tt>QUADPACK</tt> library. \n",
+    "\n",
+    "If we take one of the quadrangle sides to be $(b-a)$, then the integration is the problem of finding the length of the other side, which can be thought of some sort of weighted average of $f(x)$ over the interval $[a,b]$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "We can explore integration routines in the <a href=\"https://docs.scipy.org/doc/scipy/reference/integrate.html\">scipy.integrate</a> library."
    ]
@@ -868,7 +889,9 @@
    "source": [
     "Specifically, to evaluate integral of $f(x)$ (area under $f(x)$ for $x\\in[a,b]$):\n",
     "\n",
-    "Split the integration interval into $N$ equal-size sub-intervals of size $h=(b-a)/N=x_{i+1}-x_i$. For convenience, let's denote $f_i = f(x_i)$, $f_{i+1}=f(x_{i+1})$, etc."
+    "Split the integration interval into $N$ equal-size sub-intervals of size $h=(b-a)/N=x_{i+1}-x_i$. Note that for $N$ interval, we will need to evaluate the function at $N+1$ points: for example, splitting $[a,b]$ into two sub-intervals requires evaluating the function at three points: $a$, $a+(b-a)/2$, and $b$. \n",
+    "\n",
+    "For convenience, let's denote $f_i = f(x_i)$, $f_{i+1}=f(x_{i+1})$, etc."
    ]
   },
   {
@@ -898,7 +921,7 @@
     "\n",
     "which can be recast as\n",
     "\n",
-    "$$A \\approx h\\left[\\frac{1}{2}(f_0 + f_{N-1}) + \\sum\\limits_{i=1}^{N-2}f_i,\\right].$$"
+    "$$A \\approx h\\left[\\frac{1}{2}(f_0 + f_{N}) + \\sum\\limits_{i=1}^{N-1}f_i,\\right]$$"
    ]
   },
   {
@@ -945,6 +968,31 @@
     "    \n",
     "    hd = (b-a)/Np; xd = a + np.arange(Np)*hd\n",
     "    return (0.5*(func(a) + func(b)) + np.sum(func(xd[1:]))) * hd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# illustrate scaling of the fractional error of the integral over e^x \n",
+    "# with interval size h\n",
+    "nsteps = np.arange(30)\n",
+    "trint = np.zeros(np.shape(nsteps)[0])\n",
+    "\n",
+    "a = 0.; b = 1;\n",
+    "bma = b - a\n",
+    "for i, ns in enumerate(nsteps):\n",
+    "    hstep = bma / np.power(2., ns)\n",
+    "    trint[i] = trapzd(np.exp, a, b, hstep)\n",
+    "     \n",
+    "fexact = np.exp(b) - np.exp(a)\n",
+    "ferr = np.abs(trint/fexact - 1.)"
    ]
   },
   {
@@ -1087,7 +1135,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
