some fixes to hw01

--- a/hw01_int_interpolation.ipynb
+++ b/hw01_int_interpolation.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "## ASTR 2100, Winter 2020\n",
     "\n",
-    "## Homework Assignment 1: Numerical integration (60 points)\n",
+    "## Homework Assignment 1: Numerical integration (30 points)\n",
     "\n",
     "### Distributed: January 17; Due Friday Jan 24 at 11:59pm \n",
     "\n",
@@ -308,6 +308,20 @@
    "outputs": [],
    "source": [
     "def trapzd(func, a, b, hstep, *args):\n",
+    "    \"\"\"\n",
+    "    integration using trapezoidal scheme\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    func: python function object - function to integrate\n",
+    "    a, b: floats - integration interval\n",
+    "    hstep: float - step size to use\n",
+    "    *args: pointer to argument list to pass to dl_func\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float - value of the integral estimated using trapezoidal integration    \n",
+    "    \"\"\"\n",
     "    bma = np.abs(b-a)\n",
     "            \n",
     "    nstep = np.int(bma / hstep) \n",
@@ -329,6 +343,19 @@
    "outputs": [],
    "source": [
     "def _dc(z1, z2, hstep, *args):\n",
+    "    \"\"\"\n",
+    "    helper function to compute D_c from z1 to z2 by numerical integration using trapzd\n",
+    "    \n",
+    "    Parameters: \n",
+    "    -----------\n",
+    "    z1, z2: floats = redshift integration limits\n",
+    "    hstep: float = step size for trapezoidal integration\n",
+    "    *args: pointer to argument list to pass to dl_func\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float - value of the integral estimated using trapezoidal integration\n",
+    "    \"\"\"\n",
     "    return trapzd(dl_func, z1, z2, hstep, *args)"
    ]
   },
@@ -339,6 +366,23 @@
    "outputs": [],
    "source": [
     "def d_L(z, H0, Om0, OmL, hstep=1.e-8):\n",
+    "    \"\"\"\n",
+    "    routine computing luminosity distance from z=0 to z \n",
+    "    using helper routine for comoving distance _dc\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    z: float - redshift to which to compute d_L\n",
+    "    H0: float - Hubble constant in units of km/s/Mpc\n",
+    "    Om0: float - dimensionless mean matter density in the universe, >= 0\n",
+    "    OmL: float - dimensionless mean vacuum energy density in the universe\n",
+    "    hstep: float - step size to use\n",
+    "     \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float - value of d_L(z, H0, Om0, OmL) \n",
+    "            estimated using trapezoidal integration with step size hstep \n",
+    "    \"\"\"\n",
     "    if 1.0+OmL == 1.0: # note that I exploit the roundoff error in testing whether OmL is consistent with zero\n",
     "        return d_L_simple(z, H0, Om0) # if OmL=0, use simple formula without integration\n",
     "    else: # otherwise use numerical integration to compute distance \n",
