added a comment in hw01

--- a/hw01_int_interpolation.ipynb
+++ b/hw01_int_interpolation.ipynb
@@ -89,9 +89,11 @@
    "source": [
     "#### Estimating absolute and relative errors of the integral estimate\n",
     "\n",
-    "Given that we compute $T(h)$ during calculation of $R_1(h)$ (in the algorithm jargon it is said that computation of $T(h)$ is *embedded* in the calculation of $R_1(h)$), we can use these two estimates of the integral of different accuracy to estimate the error of the integration for the current step size $h$. Namely, the absolute error can be estimated as \n",
+    "Given that we compute $T(h)$ during calculation of $R_1(h)$ (in the algorithm jargon it is said that computation of $T(h)$ is *embedded* in the calculation of $R_1(h)$), we can use these two estimates of the integral of different accuracy to estimate the error of the integration for the current step size $h$, *for the cases when we do not know exact value of the integral* (which is in all practical applications, because if we knew the value of the integral there would be no need to evaluate it using a numerical integration method). \n",
+    "\n",
+    "Namely, the absolute error can be estimated as \n",
     "$\\epsilon_{\\rm abs}=\\vert R_1(h)-T(h)\\vert$\n",
-    "and fractional error as $\\epsilon_{\\rm r}=\\vert1- T(h)/R_1(h)\\vert$. Note that for the fractionall error, we should guard against the cases when $R_1(h)=0$. "
+    "and fractional error as $\\epsilon_{\\rm r}=\\vert1- T(h)/R_1(h)\\vert$. Note that for the fractional error, we should guard against the cases when $R_1(h)=0$. "
    ]
   },
   {
