added clarification in hw01

--- a/hw01_int_interpolation.ipynb
+++ b/hw01_int_interpolation.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "If you do not manage to get your implementation working, use my routine below for subsequent exercise \n",
     "\n",
-    "**Task 1d. Extra-credit (10 points)** Implement a routine for computing $d_L$ based on the trapezoidal integration scheme that is 4th order accurate (i.e has fractional error scaling as $\\propto h^4$) *without* using the formula $R_1(h)=[4T(h/2)-T(h)]/3$. Test your routine and demonstrate that its fractional error scales as $\\propto h^4$ using a plot. "
+    "**Task 1d. Extra-credit (10 points)** Implement a routine for computing $d_L$ based on the trapezoidal integration scheme that is 4th order accurate (i.e has fractional error scaling as $\\propto h^4$) *without* using the formula $R_1(h)=[4T(h/2)-T(h)]/3$ to eliminate the leading truncation error term. Test your routine and demonstrate that its fractional error scales as $\\propto h^4$ using a plot. "
    ]
   },
   {
