updated notebook on numpy

--- a/numpy_and_optimization.ipynb
+++ b/numpy_and_optimization.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Notes on numpy and optimization\n",
     "\n",
-    "A nice numpy tutorial can be found in Chapter 2 of this <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/\">online book</a>. \n",
+    "A nice numpy tutorial can be found in Chapter 2 of this <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/\">online book</a> and some basics are also covered in this <a href=\"https://github.com/HarvardOpenData/numpy-pandas-bootcamp/blob/master/numpy_pandas_tutorial.ipynb\">short tutorial.</a>\n",
     "\n",
     "Below are examples of the numpy functions I often use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy\n",
+    "import numpy as np"
    ]
   },
   {
@@ -23,34 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "N1, N2 = 100, 100\n",
     "# initialize a vector of size N1 filled with zeroes\n",
     "z1 = np.zeros(N1)\n",
+    "z2 =np.zeros_like(z1) # arreay with the same dimensions as o1 filled with 0.\n",
     "# the same but filled with ones\n",
     "o1 = np.ones(N1)\n",
+    "o2 = np.ones_like(o1) # arreay with the same dimensions as o1 filled with 1.0\n",
     "# initialize a 2D array of size (N1, N2)\n",
-    "a2 = np.empty((N1,N2))"
+    "a1 = np.empty((N1,N2))\n",
+    "a2 = np.empty_like(a1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "10000 (100, 100)\n",
-      "[1.10017808e-311 0.00000000e+000 0.00000000e+000 0.00000000e+000\n",
+      "[9.06102694e-312 0.00000000e+000 0.00000000e+000 0.00000000e+000\n",
       " 0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000\n",
       " 0.00000000e+000 0.00000000e+000]\n"
      ]
@@ -65,14 +71,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9.9999 9.9999 9.9999]\n",
+      " [9.9999 9.9999 9.9999]\n",
+      " [9.9999 9.9999 9.9999]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize an array of given dimensions filled with specified number\n",
+    "f = np.full((3, 3), 9.9999)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# initialize a2 array of 64-bit integer type\n",
     "i2 = np.empty((N1,N2), dtype=np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy vectors can be reshaped, which is often useful in initialization\n",
+    "r = np.arange(9).reshape(3,3)\n",
+    "print(r)"
    ]
   },
   {
@@ -84,10 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Efficient indexing (aka slicing) of numpy array and lists\n",
     "\n",
@@ -96,10 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,15 +181,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following slicing operation is particularly useful in many situations, as it reverses the order of elements in the array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99 98 97 96 95 94 93 92 91 90 89 88 87 86 85 84 83 82 81 80 79 78 77 76\n",
+      " 75 74 73 72 71 70 69 68 67 66 65 64 63 62 61 60 59 58 57 56 55 54 53 52\n",
+      " 51 50 49 48 47 46 45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28\n",
+      " 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10  9  8  7  6  5  4\n",
+      "  3  2  1  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Generate a sequence or grid of numbers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +259,6 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -280,11 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -308,10 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "When numpy array is copied in this way no copy is created, a pointer to memory location is passed on and b array simply points to the same memory location as a. As you can see modifying b above modified the same element in a. "
    ]
@@ -319,11 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -341,10 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The second operation, which involves copying, is 1000 times more expensive! \n",
     "but now b and a are independent arrays. \n",
@@ -355,11 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -381,6 +429,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Checking all elements of array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate a vector of uniformly distributed pseudo-random numbers in the interval [0,1)\n",
+    "r = np.random.uniform(0.,1.0,size=10000)\n",
+    "# np.all checks whether *all* elements of an array conform to specified condition\n",
+    "print(np.all(r>0.5))\n",
+    "print(np.all(r<1.0))\n",
+    "#np.any instead evaluates whether any of the elements satisfy the condition\n",
+    "print(np.any(r>0.5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.980443971347448e-06 0.9999553105039661\n"
+     ]
+    }
+   ],
+   "source": [
+    "# any array is an object (class) has many attributes, including functions such as min() and max()\n",
+    "print(r.min(), r.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if you want to see all attributes, run array name with a question mark as below\n",
+    "r?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Vectorizing a function\n",
     "\n",
     "We can vectorize a function, that was not designed for vectorized execution using <a href=\"https://docs.scipy.org/doc/numpy/reference/generated/numpy.vectorize.html\">numpy.vectorize</a>"
@@ -388,10 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Optimization issues "
    ]
@@ -399,11 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -439,10 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "**Lesson:** use numpy instead of explicit loops whenever possible (unless loops have small iteration count and inexpensive), but be aware of some pitfalls. \n",
     "\n",
@@ -452,11 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -474,11 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -495,11 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -515,10 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The first calculation (a *= 2) is fastest. \n",
     "\n",
@@ -528,11 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -571,10 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Direct indexing performs selection operation in place without creating a copy of array. Hence, it is much faster than fancy indexing selection which does create a copy.\n",
     "\n",
@@ -583,10 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The flatten and ravel methods of an array reshape it into a 1D vector (flattened array). The former method always returns a copy, whereas the latter returns a copy only if necessary. So ravel performs flattening \"in place\" in memory location of array without copying it elsewhere. "
    ]
@@ -594,11 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -615,11 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -643,10 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Just like with arrays in other languages scanning different indices of array incurs very different costs:"
    ]
@@ -654,11 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -679,10 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "That's because scanning the first index is contiguous in memory and thus most data is brought into cache for fast access, while scanning the second is not. \n",
     "\n",
@@ -693,9 +748,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -712,10 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Solver routines below are adapted to solve a single ODE or a system of ODEs.\n",
     "The input is can be a scalar or a vector\n",
@@ -726,9 +776,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -757,11 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -795,9 +839,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "Function using numpy arrays for everything is ~3 times slower. The culprit is np.vstack calls. vstack and hstack methods in numpy involve copying of arrays, while list method [].append just appends array to existing memory location without copying. \n",
@@ -822,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
