a small fix in hw02 notebook

--- a/hw02_approximation.ipynb
+++ b/hw02_approximation.ipynb
@@ -299,20 +299,20 @@
    "source": [
     "This is because, matrix $V$ involves a wide range of powers of $x$ and thus its elements have a vast range of values. Such matrices have large *condition* value (see <tt>03_approximaton.ipynb</tt> for the definition of condition) and are called \"ill- or poorly conditioned\". \n",
     "\n",
-    "However, if we instead using <tt>numpy.linalg.solve</tt> routine to solve the same system of equations, namely if we replace the following line in the <tt>03_approximation.ipynb</tt>\n",
+    "However, if we instead use <tt>numpy.linalg.solve</tt> routine to solve the same system of equations, namely if we replace the following line in the <tt>03_approximation.ipynb</tt>\n",
     "\n",
-    "    a = np.dot(np.linalg.inv(V), dLtr) # a = V^{-1} f\n",
+    "    a = np.dot(np.linalg.inv(V), ftr) # a = V^{-1} f\n",
     "\n",
     "with \n",
     "\n",
-    "    a = np.linalg.solve(V, dLtr)\n",
+    "    a = np.linalg.solve(V, ftr)\n",
     "    \n",
     "this fixes the problem at least until the number of training of points is much larger than 20. \n",
     "This is because <tt>numpy.linalg.solve</tt> uses a more numerically stable algorithm with LU decomposition of the Vandermonde matrix to solve the system of equations (the routine uses fortran-based LAPACK library, see <a href=\"https://software.intel.com/en-us/node/468876\">here</a>). \n",
     "\n",
     "Likewise, if we replace that line with \n",
     "\n",
-    "    a = np.linalg.lstsq(V, dLtr, rcond=None)[0] \n",
+    "    a = np.linalg.lstsq(V, ftr, rcond=None)[0] \n",
     "   \n",
     "this solves the problem as well because this routine uses numerically robust Singular Value Decomposition (SVD) method to solve the system of normal equations. Note that we can control the order of approximating polynomial in this case, by limiting the size of the Vandermonde matrix to the required order <tt>poly_order</tt> as shown here: \n",
     "    V = np.vander(xtr, N=poly_order, increasing=True)\n",
